vendor/tt-call/tests/ui/type-reference-mut.stderr
error: no rules expected the token `mut`
 --> tests/ui/type-reference-mut.rs:5:17
  |
5 |     input = [{ &mut }]
  |                 ^^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
